--- a/app.json
+++ b/app.json
@@ -1,16 +1,11 @@
 {
-  "name": "szzdproxy",
-  "description": "轻松翻墙",
-  "website": "https://github.com/fzqk/glype",
+  "name": "KodExplorer-HerokuDeploy",
+  "type": "project",
+  "description": "KodExplorer-HerokuDeploy",
+  "website": "https://kodcloud.com",
   "repository": "https://github.com/fzqk/glype",
-  "env": {
-    "APIKEY": {
-      "description": "Youtube API V3 KEY",
-      "value": "AIzaSyDOy40AKnOUvotuyMJ8Fk9guYbecB3ZUXo"
-    },
-    "PLAYLIST_ID": {
-      "description": "推荐内容 Playlist ID",
-      "value": "PLLOFsS_xM0Rx0FvJ11eS-Mxomo4xLJUD_"
-    }
-  }
+  "keywords": ["KodExplorer","Heroku"],
+  "stack": "heroku-20",
+  "success_url": "/",
+  "addons": []
 }
